--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,11 @@ body {
   grid-template-areas:
     "text"
     "complete"
+    "embedding";
+  grid-row-gap: 0.5rem;
+  grid-column-gap: 0.5rem;
+  margin: 1rem;
+  height: calc(100vh - 2rem);
+}
+textarea {
+  width: 100%;
