--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,8 @@ button {
 input {
   margin-top: 1rem;
   font-size: 16px;
+  touch-action: manipulation;
+  width: 100%;
+  width: -webkit-fill-available;
+  height: 2rem;
+}
